# unicampus

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  sa.yml
api/account/v1alpha1/: BUILD.bazel  generated.pb.go  generated.proto
api/admission/v1alpha1/: BUILD.bazel  generated.pb.go  generated.proto
api/education/v1alpha1/: BUILD.bazel  generated.pb.go  generated.proto
api/protobuf-spec/: unicampus_api_account_v1.proto  unicampus_api_admission_v1.proto
api/v1alpha1/: BUILD.bazel  education.pb.go
cmd/: README.md  cc.go
cmd/account/: BUILD.bazel  server.go  sever.go
cmd/account/persistence/: repo.go
cmd/admission/: BUILD.bazel  server.go  service.go
cmd/admission/app/: BUILD.bazel  application.go  school.go  shared.go  student.go
cmd/admission/app/commands/: BUILD.bazel  setup.go  start.go
cmd/admission/app/repositories/filestore/: BUILD.bazel
cmd/admission/app/repositories/indexer/: BUILD.bazel  repo.go  school.go
cmd/admission/app/repositories/persistence/: BUILD.bazel  application.go  region.go  repo.go  school.go  shared.go  student.go
cmd/admission/app/repositories/recommandation/: BUILD.bazel  region.go  repo.go
cmd/admission/containers/: application.go  school.go  student.go
cmd/admission/delivers/: grpc.go  http.go
cmd/admission/delivers/grpc/: server.go  tcp.go
cmd/admission/repositories/filestore/: repo.go
cmd/admission/repositories/indexer/: repo.go  school.go
cmd/admission/repositories/recommandation/: repo.go
cmd/admission/services/: minio.go
cmd/admission/services/file_store/: repo.go
cmd/admission/services/indexer/: repo.go
cmd/admission/services/persistence/: application.go  repo.go  student.go
cmd/admission/services/recommandation/: repo.go
cmd/education/: BUILD.bazel  server.go  service.go
cmd/education/app/repositories/postgres/: postgres_repo.go  util.go
cmd/school/: main.go  server.go
cmd/school/domain/: entites.go
cmd/school/indexer/: repo.go  school.go
cmd/school/persistence/: repo.go  school.go
cmd/school/recommandation/: repo.go
cmd/unictl/: BUILD.bazel  cli.go
cmd/unictl/app/: BUILD.bazel  school.go
cmd/unitool/: cli.go
deployments/: dev.sh  dev.yml  proxy.sh  setup.sh
deployments/account/: Chart.yaml
deployments/admission/: Chart.yaml  values.yaml
deployments/admission/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
deployments/helm/admission/: Chart.yaml  requirements.yaml  values.yaml
deployments/helm/admission/templates/: _helpers.tpl  deployment.yaml  secret.yaml
deployments/helm/education/: Chart.yaml  values.yaml
deployments/helm/education/templates/: _helpers.tpl  service.yaml
deployments/helm/subcharts/admission/: Chart.yaml  values.yaml
deployments/helm/unicampus/: Chart.yaml  requirements.yaml  values.yaml
deployments/helm/unicampus/charts/: admission-0.1.0.tgz  istio-1.1.0.tgz
deployments/kubernetes/: istio.sh  unicampus.sh
deployments/seed/: regions.csv  shools.csv
docs/: README.md
internal/app/account/: account.pb.go
internal/app/admission/: BUILD.bazel  application.go  school.go  student.go
internal/app/admission/app/: application.go  school.go  student.go
internal/app/admission/commands/: BUILD.bazel  setup.go  start.go
internal/app/admission/repositories/filestore/: BUILD.bazel
internal/app/admission/repositories/indexer/: BUILD.bazel  repo.go  school.go
internal/app/admission/repositories/persistence/: BUILD.bazel  application.go  repo.go  school.go  student.go
internal/app/admission/repositories/recommandation/: BUILD.bazel  repo.go
internal/app/education/elasticsearch/: BUILD.bazel  repository.go  school.go
internal/app/education/neo4j/: BUILD.bazel  region.go  repository.go
internal/app/education/postgres/: BUILD.bazel  business.go  geography.go  (+2 more)
internal/app/school/: school.pb.go
internal/app/unictl/: BUILD.bazel  school.go
internal/pkg/delivers/: BUILD.bazel  grpc.go
internal/pkg/services/: BUILD.bazel  elasticsearch.go  minio.go  neo4j.go  postgres.go  postgres_database.go  postgresql.go
internal/pkg/utils/: BUILD.bazel  uuid.go
pkg/: README.md
pkg/account/: account.pb.go  indexer_repo.go  persistencet_repo.go  recommandation_repo.go
pkg/admission/: BUILD.bazel  entites.go  geography.go  indexer.go  persistence.go  recommandation.go  value_objects.go
pkg/education/: business.go  geography.go  interaction.go  relational_repository.go  relations.go  util.go
pkg/objconv/: BUILD.bazel  application.go  school.go  student.go
pkg/school/: school.pb.go
pkg/unicampus_admission/: admission.pb.go
pkg/unicampus_api_account_v1/: unicampus_api_account_v1.pb.go
pkg/unicampus_api_admission_v1/: unicampus_api_admission_v1.pb.go
projects/education/: .gitignore  Makefile  WORKSPACE  mix.exs
projects/education/config/: dev.exs  prod.exs  test.exs
projects/education/lib/: education.ex
projects/education/test/: test_helper.exs
projects/education_ex/: Makefile
projects/education_ex/config/: config.exs  dev.exs  prod.exs  test.exs
projects/education_ex/lib/: education_postgres.ex
projects/education_recommandation/: .gitignore  Makefile  go.mod  go.sum
projects/education_recommandation/cmd/service/: BUILD.bazel  service.go
projects/education_search/: Makefile  WORKSPACE  go.mod  go.sum
projects/education_search/api/v1alpha1/: BUILD.bazel  education_search.pb.go  education_search.proto
projects/education_search/cmd/service/: BUILD.bazel  service.go
projects/web/public/: index.html
projects/web/src/: router.js
protos/: account.proto  admission.proto  school.proto
protos/shared/: location.proto
scripts/kubernetes/: install-dashboard.sh  install-istio.sh  install-knative.sh  install-tiller.sh  proxy-unicampus.sh  proxy.sh
scripts/kubernetes/istio/: install.sh
scripts/kubernetes/knative/: bazel.sh  install.sh
scripts/kubernetes/tiller/: install.sh
scripts/protobuf/: build.sh  clear.sh
website/: .editorconfig
website/src/: App.vue
website/src/pages/: Counter.vue
(+38 files in other folders)
