load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/Shikanime/unicampus/cmd/account",
    visibility = ["//visibility:private"],
    deps = [
        "//api/account/v1alpha1:go_default_library",
        "//internal/app/admission/repositories/persistence:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "account",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
