load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/Shikanime/unicampus/cmd/admission",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/admission/commands:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "admission",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "go_default_image",
    files = [":admission"],
    entrypoint = ["./admission"],
    ports = ["50051"],
    stamp = True,
)

container_push(
    name = "admission_image",
    format = "Docker",
    image = ":go_default_image",
    registry = "registry.gitlab.com",
    repository = "deva-hub/unicampus/unicampus",
)
