load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/admission/app/commands:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "admission",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "admission_image",
    binary = ":admission",
    visibility = ["//visibility:public"],
)
