load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/education",
    visibility = ["//visibility:private"],
    deps = [
        "//api/education/v1alpha1:go_default_library",
        "//internal/app/education/elasticsearch:go_default_library",
        "//internal/app/education/neo4j:go_default_library",
        "//internal/app/education/postgres:go_default_library",
        "//internal/pkg/delivers:go_default_library",
        "//internal/pkg/services:go_default_library",
    ],
)

go_binary(
    name = "education",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
