load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/education",
    visibility = ["//visibility:private"],
    deps = [
        "//api/education/v1alpha1:go_default_library",
        "//internal/app/education/elasticsearch:go_default_library",
        "//internal/app/education/neo4j:go_default_library",
        "//internal/app/education/postgres:go_default_library",
        "//internal/pkg/delivers:go_default_library",
        "//internal/pkg/services:go_default_library",
    ],
)

go_binary(
    name = "education_binary",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "education_image",
    binary = ":education_binary",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
