load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "entites.go",
        "geography.go",
        "indexer.go",
        "persistence.go",
        "recommandation.go",
        "value_objects.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/pkg/admission",
    visibility = ["//visibility:public"],
)
