load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "application.go",
        "indenfier.go",
        "school.go",
        "student.go",
    ],
    importpath = "github.com/Shikanime/unicampus/pkg/objconv",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
        "//pkg/admission:go_default_library",
    ],
)
