load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "unicampus_api_account_v1_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "unicampus_api_account_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Shikanime/unicampus/api/account/v1alpha1",
    proto = ":unicampus_api_account_v1alpha1_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "unicampus_api_account_v1alpha1_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)
