load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "application.go",
        "school.go",
        "student.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/admission/v1alpha1:go_default_library",
        "//cmd/admission/app/repositories/indexer:go_default_library",
        "//cmd/admission/app/repositories/persistence:go_default_library",
        "//pkg/admission:go_default_library",
    ],
)
