load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["school.go"],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/unictl/app",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/admission/v1alpha1:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
