load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "application.go",
        "school.go",
        "student.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/internal/app/admission",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/admission/v1alpha1:go_default_library",
        "//internal/app/admission/repositories/indexer:go_default_library",
        "//internal/app/admission/repositories/persistence:go_default_library",
        "//pkg/objconv:go_default_library",
    ],
)
