load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["school.go"],
    importpath = "github.com/Shikanime/unicampus/internal/app/unictl",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
