load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["uuid.go"],
    importpath = "github.com/Shikanime/unicampus/internal/pkg/utils",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_satori_go_uuid//:go_default_library"],
)
