load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "setup.go",
        "start.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/commands",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/admission/v1alpha1:go_default_library",
        "//cmd/admission/app:go_default_library",
        "//cmd/admission/app/repositories/indexer:go_default_library",
        "//cmd/admission/app/repositories/persistence:go_default_library",
        "//internal/pkg/delivers:go_default_library",
        "//internal/pkg/services:go_default_library",
        "//pkg/admission:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
