load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "repository.go",
        "school.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/internal/app/education/elasticsearch",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1alpha1:go_default_library",
        "//internal/pkg/services:go_default_library",
        "@com_github_olivere_elastic//:go_default_library",
    ],
)
