load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "region.go",
        "repository.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/internal/app/education/neo4j",
    visibility = ["//visibility:public"],
    deps = [
        "//api/education/v1alpha1:go_default_library",
        "//internal/pkg/services:go_default_library",
        "@com_github_johnnadratowski_golang_neo4j_bolt_driver//:go_default_library",
    ],
)
