load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/service",
    visibility = ["//visibility:private"],
    deps = [
        "//projects/education_search/api/v1alpha1:go_default_library",
        "//projects/education_search/internal/app/elasticsearch:go_default_library",
        "//projects/education_search/internal/pkg/delivers:go_default_library",
        "//projects/education_search/internal/pkg/services:go_default_library",
    ],
)

go_binary(
    name = "binary",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    binary = ":service",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)
