load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "application.go",
        "region.go",
        "repo.go",
        "school.go",
        "shared.go",
        "student.go",
    ],
    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/repositories/persistence",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pkg/services:go_default_library",
        "//pkg/admission:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
    ],
)
