load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["repo.go"],
    importpath = "github.com/Shikanime/unicampus/internal/app/admission/repositories/filestore",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_minio_minio_go//:go_default_library"],
)
