load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "repo.go",
        "school.go",
    ],
    importpath = "github.com/Shikanime/unicampus/internal/app/admission/repositories/indexer",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/services:go_default_library",
        "//pkg/admission:go_default_library",
        "@com_github_olivere_elastic//:go_default_library",
    ],
)
